# seq192

./: .gitignore  AUTHORS  BUILD  CHANGELOG.md  CHANGELOG.old  COPYING  Makefile  Makefile.am  Makefile.in  OSC  OSC.md  README.md  RTC  SEQ24  TODO  aclocal.m4  config.status  configure  configure.ac  configure.in  description-pak  seq192rc  seq192usr.example  seq24rc  seq24usr.example
arch/: PKGBUILD
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
debian/: changelog  control  copyright  rules
desktop/: seq192.desktop
doc-pak/: ChangeLog  NEWS  README
man/: MANUAL.md  Makefile  Makefile.am  Makefile.in  seq192.1  seq24.1
src/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  configfile.cpp  configfile.h  configwin32.h  controllers.h  event.cpp  event.h  font.cpp  font.h  globals.h  lash.cpp  lash.h  lfownd.cpp  lfownd.h  maintime.cpp  maintime.h  mainwid.cpp  mainwid.h  mainwnd.cpp  mainwnd.h  midibus.cpp  midibus.h  midibus_portmidi.cpp  midibus_portmidi.h  midifile.cpp  midifile.h  mutex.cpp  mutex.h  options.cpp  options.h  optionsfile.cpp  optionsfile.h  osc.cpp  osc.h  oscserver.cpp  oscserver.h  (+31 more)
src/.deps/: configfile.Po  event.Po  font.Po  lash.Po  maintime.Po  mainwid.Po  mainwnd.Po  midibus.Po  midibus_portmidi.Po  midifile.Po  mutex.Po  options.Po  optionsfile.Po  perfedit.Po  perfnames.Po  perform.Po  perfroll.Po  perftime.Po  seq24.Po  seqdata.Po  seqedit.Po  seqevent.Po  seqkeys.Po  seqmenu.Po  seqroll.Po  seqtime.Po  sequence.Po  userfile.Po
src/core/: cachefile.cpp  cachefile.h  configfile.cpp  configfile.h  controllers.h  event.cpp  event.h  globals.h  midibus.cpp  midibus.h  midifile.cpp  midifile.h  mutex.cpp  mutex.h  optionsfile.cpp  optionsfile.h  osc.cpp  osc.h  perform.cpp  perform.h  sequence.cpp  sequence.h  userfile.cpp  userfile.h
src/gui/: css.h  dataroll.cpp  dataroll.h  editwindow.cpp  editwindow.h  eventroll.cpp  eventroll.h  mainwindow.cpp  mainwindow.h  pianokeys.cpp  pianokeys.h  pianoroll.cpp  pianoroll.h  sequencebutton.cpp  sequencebutton.h  strings.h  styles.h  timeroll.cpp  timeroll.h  widgets.cpp  widgets.h
src/xpm/: bus.xpm  length.xpm  menu_full.xpm  minus.xpm  next.xpm  panic.xpm  pen.xpm  play.xpm  plus.xpm  prev.xpm  seq192.xpm  seq192_32.xpm  seq24.xpm  snap.xpm  stop.xpm
